🐛 fix: navbar on mobile

--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -105,7 +105,7 @@ li {
 
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (min-width: 800px) {
 
   .logodw {
     height: 90%;
@@ -155,15 +155,15 @@ li {
 
 .toggle .line1 {
   transform: rotate(-45deg) translate(-4px, 5px);
-  background-color: black;
+  background-color: red;
 }
 
 .toggle .line2 {
   opacity: 0;
-  background-color: black;
+  background-color: red;
 }
 
 .toggle .line3 {
   transform: rotate(45deg) translate(-4px, -5px);
-  background-color: black;
+  background-color: red;
 }
